fixed spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,6 +48,13 @@
     position: relative;
     background-image: linear-gradient(to right, #6366f1, #a855f7);
   }
+
+  .dots {
+    background: white;
+    background-image: radial-gradient(#9ca3af 1px, transparent 0);
+    background-size: 28px 28px;
+    /* background-position: -10px -10px; */
+  }
 }
 
 @tailwind base;
